Remove some deprecated code and internal JVM API uses